# istm-601-jargon-jaguars

./: .editorconfig  Maggie.py  categories.csv  csv_transactions.py  gui.py  gui_app.py  import_transactions.py  install_pandas.bat  istm-601-jargon-jaguars.pyproj  istm-601-jargon-jaguars.sln  projectturtlegraph.py  savings pie.py  test_csv_transactions.py  totals  totals.py  transactions 1.csv  transactions.csv  transactions_20250918.csv  update_transaction.py  update_transaction_comments.py
yourpkg_skeleton/: .gitignore  README.md  pyproject.toml  showmethemoney-run.spec
yourpkg_skeleton/src/showmethemoney/: __init__.py  core.py.save  csv_transactions.py
